force-app/main/default/objects/Integration_Credentials__mdt/Integration_Credentials__mdt.object-meta.xml
<CustomObject>
    <label>Integration Credentials</label>
    <pluralLabel>Integration Credentials</pluralLabel>
</CustomObject>