force-app/main/default/objects/Integration_Credentials__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>