force-app/main/default/objects/Integration_Credentials__mdt/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <description>The API Key for the Integration</description>
    <inlineHelpText>The API Key for the Integration</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>