force-app/main/default/objects/Integration_Credentials__mdt/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>The Org Domain of the Environment</description>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>