force-app/main/default/objects/Integration_Credentials__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>The Environment this applies to</description>
    <inlineHelpText>The Environment this applies to</inlineHelpText>
    <label>Environment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>