force-app/main/default/objects/Integration_Credentials__mdt/fields/Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>Environment_Name__c</fullName>
    <label>Environment Name OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>