force-app/main/default/objects/Integration_Credentials__mdt/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <description>The Name of the Integration</description>
    <inlineHelpText>The Name of the Integration</inlineHelpText>
    <label>Integration</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>