force-app/main/default/objects/Integration_Credentials__mdt/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <label>Integration Name OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>