force-app/main/default/objects/Integration_Credentials__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
                <default>true</default>
                <label>test</label>
            </value>
            <value>
                <fullName>development</fullName>
            </value>
            <value>
                <fullName>production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>