force-app/main/default/objects/Integration_Credentials__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicated if this is preduction, test or development</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>